--- a/02-document-create-element.html
+++ b/02-document-create-element.html
@@ -5,9 +5,11 @@
     <script type="text/javascript">
         const rootElement = document.getElementById('root')
         const element = React.createElement('div', {
-            children: 'Hello World! My name is Fatih...',
+            // children: 'Hello World! My name is Fatih...',
+            children: ['Hello World', ', Goodbye World'],
             className: 'container',
-        })
+        }) //, 'Hello World', ', Goodbye World')
+        console.log(element)
 
         ReactDOM.render(element, rootElement)
        // const rootElement = document.getElementById('root')
