--- a/06-custom-component.html
+++ b/06-custom-component.html
@@ -4,13 +4,20 @@
     <script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
     <script type="text/babel">
-
+        const Message = props => <div className="message">{props.msg}</div>
         const element = (
             <div className="container">
-                <div className="message">Hello World</div>
-
+                {Message({ msg: 'Hello World' })}
+                {Message({ msg: 'Goodbye World' })}
             </div>
         )
+
+        //const element = (
+        //   <div className="container">
+        //        <div className="message">Hello World</div>
+        //       <div className="message">Hello World</div>
+        //   </div>
+        //)
 
         ReactDOM.render(element, document.getElementById('root'))
     </script>
