--- a/08-jsx-interpolation.html
+++ b/08-jsx-interpolation.html
@@ -5,8 +5,15 @@
     <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
     <script type="text/babel">
 
-
-
+        function CharacterCount({ text }) {
+            return (
+                <div>
+                    {`The text "${text}" has `}
+                    {text.length ? <strong>{text.length}</strong> : 'No'}
+                    {' characters'}
+                </div>
+            )
+        }
 
         const element = (
             <>
