--- a/08-jsx-interpolation.html
+++ b/08-jsx-interpolation.html
@@ -9,12 +9,14 @@
         //The text "" has No characters
 
         function CharacterCount({ text }) {
+            //js
             return (
                 <div>
-                    {`The text "${text}" has `}{''}
+                    { /*js*/`The text "${text}" has `}{''}
                     {text.length ? <strong>{text.length}</strong> : 'No'}
                     {' charaters'}
                 </div>
+                //js
             )
         }
 
