--- a/10-styling.html
+++ b/10-styling.html
@@ -28,11 +28,11 @@
         }
     </style>
     <script type="text/babel">
-        function Box({ className = '', ...rest }) {
+        function Box({ className = '', style, ...rest }) {
             return (
                 <div
                     className={`box ${className}`}
-                    style={{ fontStyle: 'italic' }}
+                    style={{ fontStyle: 'italic', ...style }}
                     {...rest}
                 />
             )
