--- a/10-styling.html
+++ b/10-styling.html
@@ -28,10 +28,11 @@
         }
     </style>
     <script type="text/babel">
-        function Box({ className = '', style, ...rest }) {
+        function Box({ className = '', style, size, ...rest }) {
+            const sizeClassName = size ? `box--${size}` : ''
             return (
                 <div
-                    className={`box ${className}`}
+                    className={`box ${className} ${sizeClassName}`}
                     style={{ fontStyle: 'italic', ...style }}
                     {...rest}
                 />
@@ -40,17 +41,15 @@
 
         const element = (
             <div>
-                <Box className="box--small" style={{
-                    backgroundColor: 'lightblue'
-                }}>small lightblue box</Box>
-
-                <Box className="box--medium" style={{
-                    backgroundColor: 'pink'
-                }}>medium lightblue box</Box>
-
-                <Box className="box--large" style={{
-                    backgroundColor: 'orange'
-                }}>large lightblue box</Box>
+                <Box size="small" style={{ backgroundColor: 'lightblue' }}>
+                    small lightblue box
+                </Box>
+                <Box size="medium" style={{ backgroundColor: 'pink' }}>
+                    medium lightblue box
+                </Box>
+                <Box size="large" style={{ backgroundColor: 'orange' }}>
+                    large lightblue box
+                </Box>
             </div>
         )
 
