--- a/11-event-handlers.html
+++ b/11-event-handlers.html
@@ -12,6 +12,10 @@
             function handleClick() {
                 setState({ eventCount: state.eventCount + 1 })
             }
+            function handleChange(event) {
+                console.log(event)
+                setState({ username: event.target.value })
+            }
             return (
                 <div>
                     <p>There have been {state.eventCount} events.</p>
@@ -22,7 +26,7 @@
                     </p>
                     <p>You typed: {state.username}</p>
                     <p>
-                        <input onChange={event => setState({ username: event.target.value })} />
+                        <input onChange={handleChange} />
                     </p>
                 </div>
             )
