--- a/11-event-handlers.html
+++ b/11-event-handlers.html
@@ -13,7 +13,7 @@
                 setState({ eventCount: state.eventCount + 1 })
             }
             function handleChange(event) {
-                console.log(event)
+                console.log(event.nativeEvent)
                 setState({ username: event.target.value })
             }
             return (
