--- a/12-state.html
+++ b/12-state.html
@@ -4,9 +4,16 @@
     <script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
     <script type="text/babel">
-        function Greeting()
-        return <div>
-        </div>
+        function Greeting() {
+            return (
+                <div>
+                    <form>
+                        <label>Name: </label>
+                        <input />
+                    </form>
+                </div>
+            )
+        }
 
 
 
