--- a/12-state.html
+++ b/12-state.html
@@ -5,12 +5,14 @@
     <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
     <script type="text/babel">
         function Greeting() {
+            const name = 'Kent'
             return (
                 <div>
                     <form>
-                        <label>Name: </label>
-                        <input />
+                        <label htmlFor="name">Name: </label>
+                        <input id="name" />
                     </form>
+                    {name ? <strong>Hello {name}</strong> : 'Please type your name'}
                 </div>
             )
         }
