--- a/12-state.html
+++ b/12-state.html
@@ -5,12 +5,15 @@
     <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
     <script type="text/babel">
         function Greeting() {
-            const name = 'Kent'
+            const stateArray = React.useState('')
+            const name = stateArray[0]
+            const setName = stateArray[1]
+            const handleChange = event => setName(event.target.value)
             return (
                 <div>
                     <form>
                         <label htmlFor="name">Name: </label>
-                        <input id="name" />
+                        <input onChange={handleChange} id="name" />
                     </form>
                     {name ? <strong>Hello {name}</strong> : 'Please type your name'}
                 </div>
