--- a/12-state.html
+++ b/12-state.html
@@ -5,9 +5,9 @@
     <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
     <script type="text/babel">
         function Greeting() {
-            const stateArray = React.useState('')
-            const name = stateArray[0]
-            const setName = stateArray[1]
+            const [name, setName] = React.useState('')
+            //const name = stateArray[0]
+            //const setName = stateArray[1]
             const handleChange = event => setName(event.target.value)
             return (
                 <div>
