--- a/12-state.html
+++ b/12-state.html
@@ -6,9 +6,11 @@
     <script type="text/babel">
         function Greeting() {
             const [name, setName] = React.useState('')
+            const [name2, setName2] = React.useState('')
             //const name = stateArray[0]
             //const setName = stateArray[1]
             const handleChange = event => setName(event.target.value)
+            const handleChange2 = event => setName2(event.target.value)
             return (
                 <div>
                     <form>
@@ -16,6 +18,16 @@
                         <input onChange={handleChange} id="name" />
                     </form>
                     {name ? <strong>Hello {name}</strong> : 'Please type your name'}
+
+                    <div>
+                        <form>
+                            <label htmlFor="name">Name: </label>
+                            <input onChange={handleChange2} id="name" />
+                        </form>
+                        {name2 ? <strong>Hello {name2}</strong> : 'Please type your name'}
+
+
+                    </div>
                 </div>
             )
         }
