--- a/13-side-effects.html
+++ b/13-side-effects.html
@@ -6,6 +6,9 @@
     <script type="text/babel">
         function Greeting() {
             const [name, setName] = React.useState('')
+            React.useEffect(() => {
+                window.localStorage.setItem('name', name)
+            })
             const handleChange = event => setName(event.target.value)
             return (
                 <div>
