--- a/13-side-effects.html
+++ b/13-side-effects.html
@@ -5,7 +5,8 @@
     <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
     <script type="text/babel">
         function Greeting() {
-            const [name, setName] = React.useState('')
+            const [name, setName] = React.useState(
+                window.localStorage.getItem('name') || '')
             React.useEffect(() => {
                 window.localStorage.setItem('name', name)
             })
@@ -14,7 +15,7 @@
                 <div>
                     <form>
                         <label htmlFor="name">Name: </label>
-                        <input onChange={handleChange} id="name" />
+                        <input value={name} onChange={handleChange} id="name" />
                     </form>
                     {name ? <strong>Hello {name}</strong> : 'Please type your name'}
 
