--- a/13-side-effects.html
+++ b/13-side-effects.html
@@ -5,26 +5,34 @@
     <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
     <script type="text/babel">
         function Greeting() {
+            // using useState
             const [name, setName] = React.useState(
-                window.localStorage.getItem('name') || '')
+                // we are getting the name from localStorage or default to empty string
+                window.localStorage.getItem('name') || ''
+            );
+
+            // The Effect Hook lets you perform side effects in function components
+            // Load every time the Greeting() is rendered
             React.useEffect(() => {
-                window.localStorage.setItem('name', name)
-            })
-            const handleChange = event => setName(event.target.value)
+                // The read-only localStorage property allows you to access a Storage object for the
+                // document's origin; the stored data is saved across browser sessions.
+                window.localStorage.setItem('name', name);
+            });
+
+            const handleChange = event => setName(event.target.value);
+
             return (
                 <div>
                     <form>
                         <label htmlFor="name">Name: </label>
+                        {/* showing the current state of name prop */}
                         <input value={name} onChange={handleChange} id="name" />
                     </form>
                     {name ? <strong>Hello {name}</strong> : 'Please type your name'}
-
                 </div>
-            )
+            );
         }
 
-        ReactDOM.render(<Greeting />, document.getElementById('root'))
-
+        ReactDOM.render(<Greeting />, document.getElementById('root'));
     </script>
-
 </body>
