--- a/14-lazy-initialization.html
+++ b/14-lazy-initialization.html
@@ -5,6 +5,7 @@
     <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
     <script type="text/babel">
         function Greeting() {
+
             const [name, setName] = React.useState(() => {
                 console.log('hello')
                 return window.localStorage.getItem('name') || ''
@@ -14,6 +15,15 @@
             console.log('rendered')
             // We don't want to render on every change
             // Since we're using localStorage, it's not a big deal
+
+            const [name, setName] = React.useState(
+                () => {
+                    console.log('hello')
+                    return window.localStorage.getItem('name') || ''
+                }
+            );
+            console.log('rendered')
+
 
             React.useEffect(() => {
                 window.localStorage.setItem('name', name);
