--- a/14-lazy-initialization.html
+++ b/14-lazy-initialization.html
@@ -5,63 +5,35 @@
     <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
     <script type="text/babel">
         function Greeting() {
-<<<<<<< HEAD
-
             const [name, setName] = React.useState(() => {
                 console.log('hello')
+                // Arrow function
+                //  React allows us to specify a function instead of an actual value, and then it will only call that function when it needs to – on the initial render.
                 return window.localStorage.getItem('name') || ''
-
             })
-            //to see how oefen rendered?
+
             console.log('rendered')
+            //see how oefen rendered
             // We don't want to render on every change
             // Since we're using localStorage, it's not a big deal
 
-            const [name, setName] = React.useState(
-                () => {
-                    console.log('hello')
-                    return window.localStorage.getItem('name') || ''
-                }
-            );
-            console.log('rendered')
-
-
             React.useEffect(() => {
-                window.localStorage.setItem('name', name);
-            });
+                window.localStorage.setItem('name', name)
+            })
 
-            const handleChange = event => setName(event.target.value);
-
-=======
-            const [name, setName] = React.useState('')
             const handleChange = event => setName(event.target.value)
->>>>>>> lazy-initialization.html created
+
             return (
                 <div>
                     <form>
                         <label htmlFor="name">Name: </label>
-<<<<<<< HEAD
                         <input value={name} onChange={handleChange} id="name" />
                     </form>
                     {name ? <strong>Hello {name}</strong> : 'Please type your name'}
-                </div>
-            );
-        }
-
-        ReactDOM.render(<Greeting />, document.getElementById('root'));
-    </script>
-=======
-                        <input onChange={handleChange} id="name" />
-                    </form>
-                    {name ? <strong>Hello {name}</strong> : 'Please type your name'}
-
                 </div>
             )
         }
 
         ReactDOM.render(<Greeting />, document.getElementById('root'))
-
     </script>
-
->>>>>>> lazy-initialization.html created
 </body>
