--- a/15-effect-deps.html
+++ b/15-effect-deps.html
@@ -5,17 +5,14 @@
     <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
     <script type="text/babel">
         function Greeting() {
-            // using useState
+
             const [name, setName] = React.useState(
-                // we are getting the name from localStorage or default to empty string
-                window.localStorage.getItem('name') || ''
+                () => window.localStorage.getItem('name') || ''
             );
 
-            // The Effect Hook lets you perform side effects in function components
-            // Load every time the Greeting() is rendered
+
             React.useEffect(() => {
-                // The read-only localStorage property allows you to access a Storage object for the
-                // document's origin; the stored data is saved across browser sessions.
+                console.log('greeting useEffect')
                 window.localStorage.setItem('name', name);
             });
 
@@ -32,7 +29,16 @@
                 </div>
             );
         }
+        function App() {
+            const [count, setCount] = React.useState(0)
+            return (
+                <>
+                    <button onClick={() => setCount(c => c + 1)}>{count}</button>
+                    <Greeting />
+                </>
+            )
+        }
 
-        ReactDOM.render(<Greeting />, document.getElementById('root'));
+        ReactDOM.render(<App />, document.getElementById('root'));
     </script>
 </body>
