--- a/15-effect-deps.html
+++ b/15-effect-deps.html
@@ -14,7 +14,7 @@
             React.useEffect(() => {
                 console.log('greeting useEffect')
                 window.localStorage.setItem('name', name);
-            });
+            }, [name]);
 
             const handleChange = event => setName(event.target.value);
 
