herhal-les- rereading

--- a/08-jsx-interpolation.html
+++ b/08-jsx-interpolation.html
@@ -22,7 +22,7 @@
 
         const element = (
             <>
-                <CharacterCount text="Hello World" />
+                <CharacterCount text="Hello World hello" />
                 <CharacterCount text="" />
             </>
         )
