--- a/12-state.html
+++ b/12-state.html
@@ -4,7 +4,7 @@
     <script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
     <script type="text/babel">
-        function Greeting() {
+        function GreetingApp() {
             const [name, setName] = React.useState('')
             const [name2, setName2] = React.useState('')
             //const name = stateArray[0]
@@ -34,7 +34,7 @@
 
 
 
-        ReactDOM.render(<Greeting />, document.getElementById('root'))
+        ReactDOM.render(<GreetingApp />, document.getElementById('root'))
 
     </script>
 
