--- a/13-side-effects.html
+++ b/13-side-effects.html
@@ -4,12 +4,12 @@
     <script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
     <script type="text/babel">
-        function Greeting() {
+        function GreetingEffect() {
             // using useState
             const [name, setName] = React.useState(
                 // we are getting the name from localStorage or default to empty string
                 window.localStorage.getItem('name') || ''
-            );
+            )
 
             // The Effect Hook lets you perform side effects in function components
             // Load every time the Greeting() is rendered
@@ -17,7 +17,7 @@
                 // The read-only localStorage property allows you to access a Storage object for the
                 // document's origin; the stored data is saved across browser sessions.
                 window.localStorage.setItem('name', name);
-            });
+            })
 
             const handleChange = event => setName(event.target.value);
 
@@ -30,9 +30,9 @@
                     </form>
                     {name ? <strong>Hello {name}</strong> : 'Please type your name'}
                 </div>
-            );
+            )
         }
 
-        ReactDOM.render(<Greeting />, document.getElementById('root'));
+        ReactDOM.render(<GreetingEffect />, document.getElementById('root'))
     </script>
 </body>
