--- a/16-custom-hooks.html
+++ b/16-custom-hooks.html
@@ -4,17 +4,19 @@
     <script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
     <script type="text/babel">
-        function Greeting() {
-
+        function useLocalStorageState() {
             const [name, setName] = React.useState(
                 () => window.localStorage.getItem('name') || ''
-            );
-
+            )
 
             React.useEffect(() => {
-                console.log('greeting useEffect')
                 window.localStorage.setItem('name', name);
-            }, [name]);
+            }, [name])
+        }
+
+        function Greeting() {
+            useLocalStorageState()
+
 
             const handleChange = event => setName(event.target.value);
 
@@ -27,7 +29,7 @@
                     </form>
                     {name ? <strong>Hello {name}</strong> : 'Please type your name'}
                 </div>
-            );
+            )
         }
         function App() {
             const [count, setCount] = React.useState(0)
@@ -39,6 +41,6 @@
             )
         }
 
-        ReactDOM.render(<App />, document.getElementById('root'));
+        ReactDOM.render(<App />, document.getElementById('root'))
     </script>
 </body>
