--- a/16-custom-hooks.html
+++ b/16-custom-hooks.html
@@ -4,18 +4,19 @@
     <script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
     <script type="text/babel">
-        function useLocalStorageState() {
-            const [name, setName] = React.useState(
-                () => window.localStorage.getItem('name') || ''
+        function useLocalStorageState(key, defaultValue = '') {
+            const [state, setState] = React.useState(
+                () => window.localStorage.getItem('key') || defaultValue,
             )
 
             React.useEffect(() => {
-                window.localStorage.setItem('name', name);
-            }, [name])
+                window.localStorage.setItem('key', state);
+            }, [state])
+            return [state, setState]
         }
 
         function Greeting() {
-            useLocalStorageState()
+            const [name, setName] = useLocalStorageState('name')
 
 
             const handleChange = event => setName(event.target.value);
