--- a/16-custom-hooks.html
+++ b/16-custom-hooks.html
@@ -4,6 +4,7 @@
     <script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
     <script type="text/babel">
+        {/* reusable localstorage function */ }
         function useLocalStorageState(key, defaultValue = '') {
             const [state, setState] = React.useState(
                 () => window.localStorage.getItem('key') || defaultValue,
@@ -14,6 +15,7 @@
             }, [key, state])
             return [state, setState]
         }
+        {/* end reusable localstorage function */ }
 
         function Greeting() {
             const [name, setName] = useLocalStorageState('name')
@@ -27,7 +29,6 @@
                     <div>
                         <form>
                             <label htmlFor="name">Name: </label>
-                            {/* showing the current state of name prop */}
                             <input value={name} onChange={handleChange} id="name" />
                         </form>
                         {name ? <strong>Hello {name}</strong> : 'Please type your name'}
