--- a/17-dom-refs.html
+++ b/17-dom-refs.html
@@ -47,7 +47,15 @@
         function Tilt({ children }) {
             const tiltRef = React.useRef()
             React.useEffect(() => {
-                console.log(tiltRef.current)
+                // console.log(tiltRef.current)
+                const tiltNode = tiltRef.current
+                const vanillaTiltOptions = {
+                    max: 25,
+                    speed: 400,
+                    glare: true,
+                    'max-glare': 0.5,
+                }
+                VanillaTilt.init(tiltNode, vanillaTiltOptions)
             })
 
             return (
