--- a/17-dom-refs.html
+++ b/17-dom-refs.html
@@ -56,7 +56,10 @@
                     'max-glare': 0.5,
                 }
                 VanillaTilt.init(tiltNode, vanillaTiltOptions)
-            })
+                return () => {
+                    tiltNode.vanillaTilt.destroy()
+                }
+            }, [])
 
             return (
                 <div ref={tiltRef} className="tilt-root">
