--- a/19-basic-forms.html
+++ b/19-basic-forms.html
@@ -6,7 +6,15 @@
     <script type="text/babel">
 
         function UsernameForm() {
-            return 'TODO'
+            return (
+                <form>
+                    <div>
+                        <label>Username:</label>
+                        <input type="text" />
+                    </div>
+                    <button type="submit">Submit</button>
+                </form>
+            )
         }
 
         ReactDOM.render(<UsernameForm />, document.getElementById('root'))
