document selector and value added again

--- a/19-basic-forms.html
+++ b/19-basic-forms.html
@@ -9,7 +9,7 @@
             function handleSubmit(event) {
                 event.preventDefault()
                 console.log('submitted')
-                const username = document.querySelecetor('input').valie
+                const username = document.querySelector('input').valie
                 alert(`You entered: ${username}`)
             }
             return (
