--- a/19-basic-forms.html
+++ b/19-basic-forms.html
@@ -8,15 +8,18 @@
         function UsernameForm() {
             function handleSubmit(event) {
                 event.preventDefault()
-                console.log('submitted')
+                //console.log('event.target')
+                console.dir('event.target')
+                //const username = event.target[0].value
+                //const username = event.target.elements[0].value
                 const username = document.querySelector('input').value
                 alert(`You entered: ${username}`)
             }
             return (
                 <form onSubmit={handleSubmit}>
                     <div>
-                        <label>Username:</label>
-                        <input type="text" />
+                        <label htmlFor="usernameInput">Username:</label>
+                        <input id="usernameInput" type="text" />
                     </div>
                     <button type="submit">Submit</button>
                 </form>
