--- a/19-basic-forms.html
+++ b/19-basic-forms.html
@@ -6,23 +6,23 @@
     <script type="text/babel">
 
         function UsernameForm() {
-            const usernameInputRef = React.useRef()
+
             function handleSubmit(event) {
                 event.preventDefault()
                 //console.log('event.target')
                 console.dir('event.target')
                 //const username = event.target[0].value
                 //const username = event.target.elements[0].value
-                //const username = event.target.elements.usernameInput.value
+                const username = event.target.elements.usernameInput.value
                 //const username = document.querySelector('input').value  //please don't use that!!
-                const username = usernameInputRef.current.value
+                //const username = usernameInputRef.current.value
                 alert(`You entered: ${username}`)
             }
             return (
                 <form onSubmit={handleSubmit}>
                     <div>
                         <label htmlFor="usernameInput">Username:</label>
-                        <input ref={usernameInputRef} id="usernameInput" type="text" />
+                        <input id="usernameInput" type="text" />
                     </div>
                     <button type="submit">Submit</button>
                 </form>
