--- a/21-controled-forms.html
+++ b/21-controled-forms.html
@@ -7,11 +7,11 @@
 
         function UsernameForm() {
             const [username, setUsername] = React.useState('')
-            const isLowerCase = username === username.toLowerCase()
-            const error = isLowerCase ? null : 'Username must be lower case'
+            //const isLowerCase = username === username.toLowerCase()
+            //const error = isLowerCase ? null : 'Username must be lower case'
             function handleSubmit(event) {
                 event.preventDefault()
-                console.dir('event.target')
+                //console.dir('event.target')
                 alert(`You entered: ${username}`)
             }
             function handleChange(event) {
@@ -22,10 +22,13 @@
                 <form onSubmit={handleSubmit}>
                     <div>
                         <label htmlFor="usernameInput">Username:</label>
-                        <input id="usernameInput" type="text" onChange={handleChange} />
+                        <input
+                            id="usernameInput"
+                            type="text"
+                            onChange={handleChange}
+                            value={username} />
                     </div>
-                    <div style={{ color: 'red' }}>{error}</div>
-                    <button disabled={Boolean(error)} type="submit">Submit</button>
+                    <button type="submit">Submit</button>
                 </form>
             )
         }
