--- a/23-rendering-lists.html
+++ b/23-rendering-lists.html
@@ -107,6 +107,6 @@
             return array;
         }
         // uncomment this line to demo:
-        ReactDOM.render(<FocusDemo />, document.getElementById('root'))
+       // ReactDOM.render(<FocusDemo />, document.getElementById('root'))
     </script>
 </body>
