--- a/26-http-errors.html
+++ b/26-http-errors.html
@@ -5,30 +5,49 @@
     <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
     <script type="text/babel">
         function PokemonInfo({ pokemonName }) {
+            // A common mistake people make is to create a state variable called `isLoading` and set that to true or false.
+            // Instead, we’ll be using a status variable which can be set to idle, pending, resolved, or rejected.
+
+            // Adding state to Pokemon status
+            const [status, setStatus] = React.useState('idle');
             const [pokemon, setPokemon] = React.useState(null);
+            // Adding state to handle errors
+            const [error, setError] = React.useState(null);
 
             React.useEffect(() => {
                 if (!pokemonName) {
                     return;
                 }
-                // Calling fetchPokemon and setting state for the data
-                fetchPokemon(pokemonName).then(pokemonData => {
-                    setPokemon(pokemonData);
-                });
+                // setting the status when the data is resolved
+                setStatus('pending');
+                fetchPokemon(pokemonName).then(
+                    pokemonData => {
+                        setStatus('resolved');
+                        setPokemon(pokemonData);
+                    },
+                    errorData => {
+                        setStatus('rejected');
+                        setError(errorData);
+                    }
+                );
             }, [pokemonName]);
-
-            if (!pokemonName) {
+            // this is very predictable, now that we can handle the status
+            // In order to force an error yourself, you can alter the pokemonQuery into something invalid.
+            if (status === 'idle') {
                 return 'Submit a pokemon';
             }
 
-            if (!pokemon) {
+            if (status === 'rejected') {
+                return 'Oh no...';
+            }
+
+            if (status === 'pending') {
                 return '...';
             }
-            // The effect hook called useEffect is used to fetch the data with axios from the API
-            // and to set the data in the local state of the component with the state hook's update function.
-            // The promise resolving happens with async/await.
 
-            return <pre>{JSON.stringify(pokemon, null, 2)}</pre>;
+            if (status === 'resolved') {
+                return <pre>{JSON.stringify(pokemon, null, 2)}</pre>;
+            }
         }
 
         function App() {
@@ -53,7 +72,7 @@
                 </div>
             );
         }
-        // GraphQL server that serves up pokemon data to load information for a given pokemon name
+
         function fetchPokemon(name) {
             const pokemonQuery = `
           query ($name: String) {
@@ -72,10 +91,6 @@
           }
         `;
 
-            // The Fetch API is a web standard built into most modern browsers to let us make HTTP requests to the server.
-            // Using the Fetch API starts with calling the fetch() function, which allows us to make HTTP requests with the standard HTTP verbs: GET, POST, PUT, PATCH and DELETE.
-            // The fetch function returns a promise which resolves when the request completes.
-            // Making fetch call is a side-effect, so we are going to use the useEffect Hook
             return window
                 .fetch('https://graphql-pokemon.now.sh', {
                     // learn more about this API here: https://graphql-pokemon.now.sh/
